overflow-fix

--- a/style/style.css
+++ b/style/style.css
@@ -98,9 +98,13 @@ h6 {
   margin: auto;
 }
 
-body,
 html {
   overflow-x: hidden;
+}
+
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .color-light {
